--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.build
-/Atem.xcodeproj/xcuserdata
 /Packages/Socks-1.2.3
+/Atem R.xcodeproj/project.xcworkspace/xcuserdata
+/Atem R.xcodeproj/xcuserdata
