Add Message and Packet types

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /.build
 /Packages/Socks-1.2.3
-/Atem R.xcodeproj/project.xcworkspace/xcuserdata
-/Atem R.xcodeproj/xcuserdata
+/Atem.xcodeproj/project.xcworkspace/xcuserdata
+/Atem.xcodeproj/xcuserdata
