--- a/Atem.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/Atem.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>Atem R-Package.xcscheme</key>
+    <key>Atem-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
