--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Packages/Socks-1.2.3
 /Atem.xcodeproj/project.xcworkspace/xcuserdata
 /Atem.xcodeproj/xcuserdata
+/Protocol.playground/Sources
+/Protocol.playground/playground.xcworkspace/xcuserdata
