Add handlers before connection initialisation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Atem.xcodeproj/project.xcworkspace/xcuserdata
 /Atem.xcodeproj/xcuserdata
 /Protocol.playground/playground.xcworkspace/xcuserdata
+/build
