--- a/Atem.xcodeproj/xcshareddata/xcschemes/Atem-Package.xcscheme
+++ b/Atem.xcodeproj/xcshareddata/xcschemes/Atem-Package.xcscheme
@@ -124,6 +124,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
