Add CI tests for Ubuntu
use os matrix, use spaces

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,14 +2,18 @@ name: Swift
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, development ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, development ]
 
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
