--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,9 +21,9 @@ jobs:
             TEST: "swift test -v --enable-test-discovery"
 
     steps:
-     - uses: fwal/setup-swift@v1
+     - uses: dev1an/setup-swift@swift-5.5
        with:
-         swift-version: '5.4'
+         swift-version: '5.5'
      - uses: actions/checkout@v2
      - name: Swift version info
        run: swift --version
